<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/burung_background_home_hd"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/hello_homepage"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/intro_homepage"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/detect_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/white"
            android:alpha="0.7"
            android:text="@string/deteksi_btn"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:src="@drawable/button_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/list_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="44dp"
            android:alpha="0.7"
            android:backgroundTint="@color/white"
            android:src="@drawable/button_bg"
            android:text="@string/list_btn"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detect_btn" />

        <Button
            android:id="@+id/forum_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="44dp"
            android:alpha="0.7"
            android:backgroundTint="@color/white"
            android:src="@drawable/button_bg"
            android:text="@string/forum_btn"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>